// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block arguments 1`] = `Object {}`;

exports[`Block arguments 2`] = `
Object {
  "a": 1,
}
`;

exports[`Block arguments 3`] = `
Object {
  "a": 0,
  "b": 1,
  "c": 2,
}
`;

exports[`Block arguments 4`] = `
Object {
  "a": 0,
  "c": 2,
}
`;
